--- a/zengohegy/style.css
+++ b/zengohegy/style.css
@@ -1,7 +1,10 @@
+body{
+		background-color: green;
+}
+
 #content{
 	width: 888px;
     margin: auto;
-	background-color: green;
 }
 #imageright{
 	margin-left: 20px;
